classDiagram
    %% ============================================
    %% HEURISTIC COMPONENTS VIEW
    %% Focus: Decision Tree-Based Diagnosis
    %% ============================================

    class HeuristicStrategy {
        +strategy_folder: Optional~Path~
        -_strategy_trees: List~StrategyTree~
        +__init__(strategy_folder: Optional~str~)
        +diagnose(data_mgr: DataManager) List~Diagnosis~
        +get_required_metrics() List~str~
        -_load_trees(folder: Path) None
    }

    class StrategyTree {
        +tree_name: str
        +description: str
        +root_node: PropertyNode
        +config_path: str
        +__init__(tree_name: str, description: str, root_node: PropertyNode, required_metrics: List~dict~, config_path: str)
        +load_from_yaml(path: str) StrategyTree$
        +traverse(data_mgr: DataManager) Diagnosis
        +get_required_metrics() List~dict~
        -_missing_metrics(data_mgr: DataManager) List~str~
    }

    class PropertyNode {
        +node_id: str
        +description: str
        +__init__(config: dict)
        +is_leaf() bool
        +evaluate(data_mgr: DataManager) Tuple~bool, float, float~
        +get_child(branch: bool) PropertyNode
        +get_diagnosis(source: str, triggered_metrics: List~str~, metric_value: float) Diagnosis
    }

    class DataManager {
        +get_metric(group: str, metric: str, trace: Optional~str~) Series
        +has_metric(group: str, metric: str, trace: Optional~str~) bool
        +job_context: Optional~JobContext~
    }

    class Diagnosis {
        <<dataclass>>
        +bottleneck_type: BottleneckType
        +severity_score: float
        +confidence: float
        +recommendation: Optional~str~
        +source: str
        +triggered_metrics: List~str~
        +is_healthy: bool
        +is_unknown: bool
    }

    class BottleneckType {
        <<enumeration>>
        PIPELINE_STALL
        COMPUTE_UNDERUTILIZATION
        PRECISION_WASTE
        BRANCH_MISPREDICTION
        CACHE_PRESSURE
        INTRA_NODE_LOAD_IMBALANCE
        INTER_NODE_LOAD_IMBALANCE
        NONE
        UNKNOWN
        +get_macro_category() MacroCategoryType
    }

    class MacroCategoryType {
        <<enumeration>>
        COMPUTE_BOUND
        MEMORY_BOUND
        LOAD_IMBALANCE
        OTHER
        NONE
        UNKNOWN
    }

    %% Relationships
    HeuristicStrategy o-- StrategyTree : _strategy_trees
    HeuristicStrategy --> DataManager : uses
    HeuristicStrategy --> Diagnosis : produces

    StrategyTree *-- PropertyNode : root_node
    StrategyTree --> DataManager : uses
    StrategyTree --> Diagnosis : produces

    PropertyNode --> PropertyNode : if_true / if_false
    PropertyNode --> Diagnosis : produces

    Diagnosis --> BottleneckType : has
    BottleneckType --> MacroCategoryType : get_macro_category
